# XDMarkov

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  markov1D.rs
