[package]
name = "xDMarkov"
version = "0.1.0"
authors = [
    "Guy Garcia <guy.garcia@protonmail.com>",
]
edition = "2018"

# Some descriptive data
description = "A dimensional implementation of the Markov algorithm"
repository = "https://github.com/FloppyDisck/xDMarkov.git"
keywords = ["markov"]
categories = ["art", "generative", "algorithm"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"

[dev-dependencies]